src/objects/LnP_Licence_Application__c.object
<CustomObject>
    <description>To store Application JSON</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Application</relationshipLabel>
        <relationshipName>License_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW_Application2__c</referenceTo>
        <relationshipLabel>License Application</relationshipLabel>
        <relationshipName>License_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>License Application</relationshipLabel>
        <relationshipName>License_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licence_Application_Bg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>License Application</relationshipLabel>
        <relationshipName>License_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licence_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Application</label>
        <referenceTo>LnP_Licence_Application__c</referenceTo>
        <relationshipLabel>License Application</relationshipLabel>
        <relationshipName>License_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LnP_Form_JSON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>License Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Licence Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>